--- a/styles.css
+++ b/styles.css
@@ -1,1 +1,67 @@
 /*  your css code here. If applicable */
+/* General Page Styling */
+body{
+    background-color: #eef2f3;
+    color: #2d3436;
+    font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
+    margin: 0;
+    display: block;
+    justify-content: center;
+    padding: 40px 0;
+	width:1100px;
+}
+table,td{
+	border:2px solid black;
+}
+
+/* Required Image Container Class */
+.imageContainer {
+    width: 100%;
+    height: 450px;
+    background: #000;
+	display:block;
+}
+
+.imageContainer img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    opacity: 0.9;
+}
+
+/* Table Specifications */
+.arch-table {
+    width: 1100px;
+    border-collapse: collapse;
+}
+
+.arch-table td {
+    padding: 30px;
+    vertical-align: middle;
+    border-bottom: 1px solid #f0f0f0;
+}
+
+.side-col img {
+    width: 200px;
+    height: 200px;
+    object-fit: cover;
+    display: block;
+    filter: grayscale(20%);
+    transition: filter 0.3s ease;
+}
+
+.side-col img:hover {
+    filter: grayscale(0%);
+}
+
+.main-col h2 {
+    margin-top: 0;
+    font-size: 1.6em;
+    color: #2d3436;
+}
+
+.main-col p {
+    line-height: 1.8;
+    color: #636e72;
+}
+
